fix alignment of header

--- a/src/scss/desktop.scss
+++ b/src/scss/desktop.scss
@@ -6,7 +6,6 @@
   }
 
   .brand {
-    margin-top: 3.675rem;
     a {
       display: block;
       // Match padding with nav-links
